envoy-tls.yml
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 443
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config: 
              '@type': "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
              stat_prefix: http_proxy
              route_config: 
                name: all
                virtual_hosts:
                  - name: allbackend_cluster
                    domains: 
                      - 'subjless.space'
                    routes:
                      - match: 
                          prefix: "/api/"
                        route:
                          prefix_rewrite: "/"
                          cluster: api_cluster                    
              http_filters:
                  - name: envoy.filters.http.router
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context: 
                tls_certificates:
                  certificate_chain: {filename: "/etc/envoy/cert.pem"}
                  private_key: {filename: "/etc/envoy/private.pem"}
                alpn_protocols: ["h2,http/1.1"]
                tls_params:
                   tls_minimum_protocol_version: "TLSv1_2"
  clusters:
    - name: api_cluster
      connect_timeout: 11s
      type: strict_dns
      load_assignment:
        cluster_name: api_cluster
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: hub_main
                    port_value: 8080
