envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config: 
              '@type': "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
              stat_prefix: http_proxy
              route_config: 
                name: all
                virtual_hosts:
                  - name: allbackend_cluster
                    domains: 
                      - 'localhost'
                    routes:
                      - match: 
                          prefix: "/api/"
                        route:
                          prefix_rewrite: "/"
                          cluster: api_cluster                    
              http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: api_cluster
      connect_timeout: 11s
      type: strict_dns
      load_assignment:
        cluster_name: api_cluster
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: hub_main
                    port_value: 8080
